# sophgo_api

./: .gitignore  README.md  publish.sh
application/YOLOv5_fuse_streamlt/python/: README.md  front.py  yolov5_opencv.py
application/YOLOv5_multi_QT/cpp/: README.md
bmcv/: README.md
bmcv/bm_cluster/: main.cpp  readme.md  run.sh
bmcv/bm_cluster/data/: bmcv_api_ext.h  libbmcv.so.0
bmcv/bm_cluster2/: CMakeLists.txt  cluster.py  main.cpp  readme.md  run.sh
bmcv/bm_cluster3/: cluster_cvte.py  main.cpp  readme.md
bmcv/bm_cluster3/data/: bmcv_api_ext.h
bmcv/bm_cluster4/: cluster_cvte.py
bmcv/bm_cluster4/data/: bmcv_api_ext.h
bmcv/bm_cluster5/: compare.py  cpp_py聚类结果对比.py  main.cpp
bmcv/bm_cluster5/data/: bmcv_api_ext.h
bmcv/bm_cluster6/: cluster_sophon.py  readme.md  run.sh
bmcv/bm_convert/: main.cpp
bmcv/bm_image/: CMakeLists.txt  main.cpp
bmcv/bm_image_alloc/: main.cpp
bmcv/bm_image_convert/: CMakeLists.txt  main.cpp
bmcv/bm_image_dump/: CMakeLists.txt  main.cpp
bmcv/bm_warp/: main.cpp
bmcv/bmcv_basic/: CMakeLists.txt  main.cpp
bmcv/bmcv_read_bm_image/: main.cpp
bmcv/bmcv_read_bm_images/: main.cpp
bmcv/bmcv_to_bytes/: CMakeLists.txt  main.cpp
bmcv/resnet_bmcv_faiss/: main.cpp  test_faiss_indexflatIP.cpp
bmcv/xiya_overlay_image/: libbmcv.so.0.6.1  test_cv_overlay.cpp
bmcv/xiya_overlay_image/overlay_h/: bmcv_api_ext.h
bmlib/: README.md
bmlib/get_sn/: CMakeLists.txt  get_sn.cpp
bmlib/mmap/: CMakeLists.txt  main.cpp
bmruntime/: README.md
bmruntime/interface/: CMakeLists.txt  all_in_one2.py  download.sh  interface.cpp  run.cpp
bmruntime/interface_mask/: CMakeLists.txt  run.cpp
bmruntime/interface_mask/scripts/: yolov8s_getmask_32_cali_table  yolov8s_getmask_32_fp32.bmodel  yolov8s_getmask_32_int8.bmodel  yolov8s_getmask_qtable
bmruntime/transpose/: CMakeLists.txt  README.md  transpose.cpp
bmruntime/transpose_v1/: CMakeLists.txt  README.md  all_in_one2.py  multi_dim_transpose.onnx  transpose.cpp  transpose.py
bmruntime/transpose_v1/scripts/: export.py
client_server/sample1/client/: http_create.py  http_eval.py  http_result.py
client_server/sample1/server/: http_run.py
cmake_template/: CMakeLists.txt
cmake_template/src/: CMakeLists.txt  main.cpp
cmake_template/src/add/: CMakeLists.txt  add.cpp
cmake_template/src/multi/: CMakeLists.txt  multi.cpp  multi.h
cte/: readme.md
ffmpeg/: README.md
ffmpeg/bmcv_encode_rtsp/: main.cpp
ffmpeg/bmcv_encode_rtsp2/: CMakeLists.txt  main.cpp
ffmpeg/bmcv_vpp_dwa_stitch_enc_rtsp/: CMakeLists.txt  main.cpp
ffmpeg/decoder_key/: CMakeLists.txt
ffmpeg/test_latency-ffmpeg/: CMakeLists.txt  ff_video_decode.cpp  main.cpp
ffmpeg/time_stamp/: CMakeLists.txt
front_back/client_server/flash_request_sample1/server/: server.py
front_back/client_server/http_sample/: websocket_server.py
front_back/client_server/multi_socket_sample1/: websocket_server.py
front_back/client_server/webRTC_sample/: README.md  index.html  signaling_server.py
front_back/client_server/websockets_sample1/: websocket_client.py  websocket_server.py
front_back/client_server/websockets_sample2/: websocket_client.py
front_back/nginx/: README.md  index.html  my_nginx_app.conf
front_back/streamlit/: back.py  front.py
front_back/streamlit_video/: back.py  front.py
general_cpp/pahole/: see  see.cpp
general_python/cluster/: cluster.py
general_python/numpy/: expand.py
llm/: LLM_analysis.ipynb  LLM_analysis2.ipynb
mlir/: README.md  mlir_latest.sh  yolox.sh
opencv/: README.md
opencv/bm_image/: CMakeLists.txt  main.cpp
pybind/template/: CMakeLists.txt  math1.cpp
pybind/template/cpp/: testpybind.py
sail/: README.md
sail/cpp/bm_image_bytes/: CMakeLists.txt  main.cpp
sail/cpp/bm_image_convert/: main.cpp
sail/cpp/decode_imwrirte/: main.cpp
sail/cpp/sail_dec_enc/: main.cpp
sail/cpp/sail_dec_rtsp/: main.cpp
sail/cpp/sail_decoder_rawstream2/: main.cpp
sail/cpp/sail_drawsquare/: main.cpp
sail/cpp/sail_encode_rtsp/: main.cpp
sail/cpp/sail_encode_rtsp_hand/: CMakeLists.txt  main.cpp
sail/cpp/sail_read_yuv/: main.cpp
sail/cpp/sail_read_yuv2/: main.cpp
sail/cpp/sail_video_decoder/: CMakeLists.txt
sail/python/asmat/: crop_asmat.py
sail/python/bm_image_bytes/: tobytes.py
sail/python/dec_enc/: sail_dec_enc.py
sail/python/imwrite_speed/: spped.py
sail/python/matmul/: all_in_one.py
sail/python/media_basic/: README.md  cv_dec_multipro.py  sail_dec_enc.py  video_decoder_get.py
sail/python/muldec_mulyolov5_mulenc/: yolov5_bmcv_mul.py
sail/python/numpy_bytes/: numpy_bytes.py
sail/python/qwen_prompt/: performance_test_case.txt  prompts.py
sail/python/transpose/: transpose.py
testcase/: get_device_info.sh  get_info(1).sh  get_info.sh
testcase/jpu_codec/: test_jpumulti_decode_jpeg_1080_420.sh  test_jpumulti_encode_jpeg_1080_420.sh
testcase/xlx_test_decode_fps_demo/: test_decode_fps_demo.sh
